# HoudiniCollada

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: MainLib.h
src/: MainLib.cpp
